# horcrux

./: .acpxrc.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  horcrux-prime.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 2026-03-22-horcrux-plan.md  2026-03-22-init-agent-plan.md  2026-03-22-multi-client-plan.md  2026-03-22-polish-2-plan.md  2026-03-22-polish-plan.md  2026-03-22-refine-plan.md  2026-03-22-typecheck-plan.md  adding-a-harness.md
memory/: TASK.md
profiles/: hermes-deck.yaml  zocots.yaml
skills/horcrux/: SKILL.md
src/horcrux/: __init__.py  check.py  cli.py  differ.py  fix.py  init_flow.py  profile.py  registry.py  source.py
src/horcrux/targets/: __init__.py  base.py  hermes.py  openclaw.py  registry.py
src/horcrux/transforms/: __init__.py  base.py  copy.py  filter.py  llm.py  substitute.py
tests/: conftest.py  test_check.py  test_cli.py  test_diff.py  test_fix.py  test_hermes_target.py  test_init_flow.py  test_package.py  test_profile.py  test_registry.py  test_smoke.py  test_source.py  test_target_registry.py  test_targets.py  test_transforms.py  test_transforms_property.py
tests/fixtures/canonical/: AGENTS.md  BOUNDARIES.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
tests/fixtures/canonical/refs/: BIO.md  DEVELOPMENT.md  GUARDRAILS.md  HANDOFF.md  OPERATIONS.md
tests/fixtures/profiles/: test-agent.yaml
