[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "horcrux"
version = "0.1.0"
description = "Seed and maintain agent identities across harnesses."
readme = "docs/2026-03-22-horcrux-plan.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Norm Smith" },
]
dependencies = [
  "pydantic>=2.11.0",
  "PyYAML>=6.0.0",
  "typer>=0.16.0",
]

[project.scripts]
horcrux = "horcrux.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/horcrux"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
